Fix item alignment on mobile and remove unnecessary fragment

--- a/website/src/views/timetable/ModulesSelect.scss
+++ b/website/src/views/timetable/ModulesSelect.scss
@@ -116,5 +116,7 @@ $item-padding-vertical: 0.6rem;
 }
 
 .optionActions {
+  display: flex;
+  align-items: center;
   margin: -$item-padding-vertical 0;
 }
